<resources>
    <string name="app_name">Catálogo de Produtos</string>
    <string name="dashboard_intro">Catálogos de Produtos</string>
    <string name="dashboard_description">Procure por produtos do Mercado Livre.</string>
    <string name="search_hint">Digite algum produto</string>
    <string name="menu_search">Busca</string>
    <string name="offline_title">Hmmm, você esta offline!</string>
    <string name="offline_description">Verifique sua conexão e tente novamente.</string>
    <string name="check_connection">Recarregar</string>
    <string name="all_items_loaded">Já exibimos todos os produtos</string>
    <string name="search_not_found_title">Hmm, foi mal!</string>
    <string name="search_not_found_description">Não encontramos nenhum produto para essa palavra-chave %s</string>
    <string name="generic_error_message">Alguma coisa deu errado, por favor, verifique a sua palavra-chave usada na busca.</string>
    <string name="malformed_product_id">Não conseguimos carregar os detalhes deste produto.</string>
    <string name="interest_free">sem juros</string>
    <string name="free_shipping">Frete grátis</string>
    <string name="num_photos">%s fotos</string>
    <string name="products_status">%s - %s vendidos</string>
    <string name="new_product">Novo</string>
    <string name="used_product">Usado</string>
    <string name="characteristics">Características</string>
    <string name="description">Descrição</string>
</resources>
