<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screenContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.product.ProductActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <include
                android:id="@+id/offlineState"
                android:visibility="gone"
                tools:visibility="visible"
                layout="@layout/offline_state"/>

            <include
                android:id="@+id/searchNotFound"
                android:visibility="gone"
                tools:visibility="visible"
                layout="@layout/search_not_found_state"/>

            <include
                android:id="@+id/defaultError"
                android:visibility="gone"
                tools:visibility="visible"
                layout="@layout/default_error_state"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/picturePager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/photosSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone"
                    style="@style/Text.Body.Medium"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:background="@color/gray_opacity_90"
                    android:textColor="@android:color/white"
                    tools:text="10 fotos"/>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                android:elevation="4dp"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:background="@color/gray"
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detailsContainer">

            <TextView
                android:id="@+id/statusProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/Text.Body"
                android:textColor="@color/gray40"
                tools:text="Novo - 350 vendidos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                tools:text="Caixa de som, jbl Caixa de som, jbl Caixa de som"
                style="@style/TextHeadline.Medium"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statusProduct"/>

            <TextView
                android:id="@+id/priceProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                tools:text="R$ 423,00"
                style="@style/TextHeadline"
                android:textAlignment="textStart"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productTitle"/>

            <ImageView
                android:id="@+id/paymentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_credit_card"
                android:tint="@color/gray40"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@id/payment"
                app:layout_constraintBottom_toBottomOf="@id/payment"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="10x R$ 125 sem juros"
                style="@style/Text.Body"
                app:layout_constraintTop_toBottomOf="@id/priceProduct"
                app:layout_constraintStart_toEndOf="@id/paymentIcon"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/rateFree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/green"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="sem juros"
                android:text="@string/interest_free"
                style="@style/Text.Body"
                app:layout_constraintTop_toBottomOf="@id/priceProduct"
                app:layout_constraintStart_toEndOf="@id/payment"

                android:contentDescription="@null"/>

            <ImageView
                android:id="@+id/shipmentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_local_shipping"
                android:tint="@color/gray40"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@id/shipment"
                app:layout_constraintBottom_toBottomOf="@id/shipment"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/shipment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="Frete grátis"
                style="@style/Text.Body"
                app:layout_constraintTop_toBottomOf="@id/payment"
                app:layout_constraintStart_toEndOf="@id/paymentIcon"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@null"/>

            <View
                android:id="@+id/characteristicsDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray80"
                android:layout_marginTop="32dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/shipment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/characteristicsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                style="@style/Text.Title.Medium"
                app:layout_constraintTop_toBottomOf="@id/characteristicsDivider"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/characteristics"/>

            <ImageView
                android:id="@+id/nextCharacteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_next"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@id/characteristicsTitle"
                app:layout_constraintBottom_toBottomOf="@id/characteristicsTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@null"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/characteristicsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/characteristicsTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/descriptionDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray80"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/characteristicsRecycler"
                app:layout_constraintBottom_toTopOf="@id/descriptionTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                style="@style/Text.Title.Medium"
                app:layout_constraintTop_toBottomOf="@id/characteristicsRecycler"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/description"/>

            <ImageView
                android:id="@+id/nextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_next"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="@id/descriptionTitle"
                app:layout_constraintBottom_toBottomOf="@id/descriptionTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="15"
                android:ellipsize="end"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                tools:visibility="visible"
                tools:text="Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, Lorem ipsum dolor sit amet.., comes from a line in section 1.10.32.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from de Finibus Bonorum et Malorum by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham."
                style="@style/Text.Body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/characteristics"/>

            <View
                android:id="@+id/gradientDescription"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/sh_gradient_white_transparent"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/description"/>

            <View
                android:id="@+id/descriptionEndDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray80"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>